tests/should_succeed/eq_ne.jou
cdecl printf(format: byte*, ...) -> int

def main() -> int:
    printf("%d\n", 2*3 == 6)  # Output: 1
    printf("%d\n", 2*3 == 7)  # Output: 0
    printf("%d\n", 6 == 2*3)  # Output: 1
    printf("%d\n", 7 == 2*3)  # Output: 0

    printf("%d\n", 2*3 != 6)  # Output: 0
    printf("%d\n", 2*3 != 7)  # Output: 1
    printf("%d\n", 6 != 2*3)  # Output: 0
    printf("%d\n", 7 != 2*3)  # Output: 1

    return 0
