tests/syntax_error/keyword_bool.jou
def main() -> int:
    bool = 1  # Error: expected an expression, got the 'bool' keyword
    return 0
